2015-01-05  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/17773
	* elflink.c (bfd_elf_final_link): Assign the file position for
	the symbol string table only there are symbols to be emitted.

2014-12-23  Tristan Gingold  <gingold@adacore.com>

	* version.m4: Bump version to 2.25.0
	* configure: Regenerate.

2014-12-23  Tristan Gingold  <gingold@adacore.com>

	* version.m4: Bump version to 2.25
	* configure: Regenerate.

2014-12-19  Andrew Bennett  <andrew.bennett@imgtec.com>

	* elfxx-mips.c (mips_elf_calculate_relocation): Only check for
	overflow on non-weak undefined symbols.

2014-12-15  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/17713
	* elflink.c (_bfd_elf_gc_mark_rsec): Check corrupt input.

2014-12-13  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/17689
	* elf64-x86-64.c (elf_x86_64_link_hash_entry): Add needs_copy.
	Change has_bnd_reloc to bit field.
	(elf_x86_64_link_hash_newfunc): Initialize needs_copy and
	has_bnd_reloc to 0.
	(elf_x86_64_check_relocs): Set has_bnd_reloc to 1 instead
	of TRUE.
	(elf_x86_64_adjust_dynamic_symbol): Copy needs_copy from the
	real definition to a weak symbol.
	(elf_x86_64_allocate_dynrelocs): Also check needs_copy of a
	weak symbol for PIE when discarding space for relocs against
	symbols which turn out to need copy relocs.
	(elf_x86_64_relocate_section): Also check needs_copy of a
	weak symbol for PIE with copy reloc.

2014-12-12  Alan Modra  <amodra@gmail.com>

	PR 15228
	* elflink.c (_bfd_elf_adjust_dynamic_copy): Call bfd_set_error.

2014-12-10  Alan Modra  <amodra@gmail.com>

	* dwarf2.c (read_address): Check bfd_target_elf_flavour before
	calling get_elf_backend_data.
	(_bfd_dwarf2_find_nearest_line): Fix parens.

2014-12-05  H.J. Lu  <hongjiu.lu@intel.com>

	* elf64-x86-64.c (bfd_elf32_get_synthetic_symtab): New.

2014-12-04  H.J. Lu  <hongjiu.lu@intel.com>

	PR binutils/17677
	* elf-bfd.h (_bfd_elf_ifunc_get_synthetic_symtab): New prototype.
	* elf-ifunc.c (_bfd_elf_ifunc_get_synthetic_symtab): New
	function.